Overflow auto on p so correct margin is created

--- a/app/assets/stylesheets/lists.css.scss
+++ b/app/assets/stylesheets/lists.css.scss
@@ -11,6 +11,9 @@
     &:last-child {
       border-bottom: none;
     }
+    p {
+      overflow: auto;
+    }
     .gift-count {
       float: right;
     }
